# indivisible-legacy

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README  README.md  TODO.md  astyle.cfg
cmake/: FindGMP.cmake
src/: Main.cpp  args.h  files.c  files.h  global.h  linked_list.c  linked_list.h  list.c  list.h  llist.c  main.c  optimizers.h  prime_test.c  types.h
